--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/ordit_db?schema=public
       - PORT=8000
     env_file:
-      - .env.production
+      - .env.docker
     depends_on:
       - postgres
     restart: always
@@ -24,6 +24,15 @@ services:
       - POSTGRES_DB=ordit_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
 
 volumes:
   postgres_data:
