chore: update backend service to use .env.production env file

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,11 @@ events {
 http {
     server {
         listen 80;
-        server_name localhost;
+        server_name localhost playbuddys.com www.playbuddys.com;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
         location / {
             proxy_pass http://app:8000;
@@ -16,4 +20,21 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
+
+    # server {
+    #     listen 443 ssl;
+    #     server_name playbuddys.com www.playbuddys.com;
+    #
+    #     ssl_certificate /etc/letsencrypt/live/playbuddys.com/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/playbuddys.com/privkey.pem;
+    #
+    #     location / {
+    #         proxy_pass http://app:8000;
+    #         proxy_http_version 1.1;
+    #         proxy_set_header Upgrade $http_upgrade;
+    #         proxy_set_header Connection 'upgrade';
+    #         proxy_set_header Host $host;
+    #         proxy_cache_bypass $http_upgrade;
+    #     }
+    # }
 }
